force-app/main/default/objects/ParcelaApolice__c/ParcelaApolice__c.object-meta.xml
<CustomObject>
    <label>Parcelas da Apólice</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Número de identificação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parcelas da Apólice</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>