force-app/main/default/objects/ParcelaApolice__c/fields/CA_Ano__c.field-meta.xml
<CustomField>
    <fullName>CA_Ano__c</fullName>
    <label>Ano</label>
    <length>4</length>
    <type>Text</type>
</CustomField>