force-app/main/default/objects/ParcelaApolice__c/fields/CA_Apolice__c.field-meta.xml
<CustomField>
    <fullName>CA_Apolice__c</fullName>
    <label>Apólice</label>
    <referenceTo>CA_Apolice__c</referenceTo>
    <relationshipName>CA_ParcelaApolice</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>