force-app/main/default/objects/ParcelaApolice__c/fields/CA_NumeroParcela__c.field-meta.xml
<CustomField>
    <fullName>CA_NumeroParcela__c</fullName>
    <label>Número da Parcela</label>
    <length>255</length>
    <type>Text</type>
</CustomField>