force-app/main/default/objects/ParcelaApolice__c/fields/CA_Valor__c.field-meta.xml
<CustomField>
    <fullName>CA_Valor__c</fullName>
    <label>Valor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>